/*========================== begin_copyright_notice ============================

Copyright (C) 2021 Intel Corporation

SPDX-License-Identifier: MIT

============================= end_copyright_notice ===========================*/

syntax = "proto3";

import "Metrics/proto_schema/code_reference.proto";

package IGC_METRICS;

message VarInfo {

  enum VarType {
    Type_UD    = 0;  // unsigned double word integer
    Type_D     = 1;  // signed double word integer
    Type_UW    = 2;  // unsigned word integer
    Type_W     = 3;  // signed word integer
    Type_UB    = 4;  // unsigned byte integer
    Type_B     = 5;  // signed byte integer
    Type_F     = 6;  // signed single precision
    Type_VF    = 7;  // 32-bit restricted Vector Float
    Type_V     = 8;  // 32-bit halfbyte integer Vector
    Type_DF    = 9;
    Type_BOOL  = 10;
    Type_UV    = 11;
    Type_Q     = 12; // 64-bit signed integer
    Type_UQ    = 13; // 64-bit unsigned integer
    Type_HF    = 14; // half float
    Type_NF    = 15; // native float (only used by plane macro)
    Type_BF    = 16; // bfloat16 (used in mov only)
    Type_UNDEF = 17;
  }

  enum AddressModel {
    GLOBAL = 0;
    LOCAL = 1;
  }

  enum MemAccess {
    NONE = 0;
    BLOCKED = 1;
    STATEFUL = 2;
    STATELESS = 3;
    ATOMIC = 4;
  }

  message BankConflictInfo {
    int32 count = 1;
    int32 sameBank = 2;
    int32 twoSrc = 3;
  }

  optional string name = 1;
  int32 size = 2;
  VarType type = 3;
  bool promoted2GRF = 4;
  AddressModel addrModel = 5;
  MemAccess memoryAccess = 6;
  bool isSpill = 7;
  bool isUniform = 8;
  bool isConst = 9;
  BankConflictInfo bc_stats = 10;

  optional CodeRef varLoc = 11;
}